--- a/style.css
+++ b/style.css
@@ -88,13 +88,12 @@ body {
     border-radius: 0.5rem;
     padding: 0.7rem 1rem;
     margin-bottom: 3rem;
-    /* background-color: #92dce5; */
+    background-color: #92dce5;
     color: #12130F;
     font-family: 'Poppins', sans-serif;
     font-size: 1.5rem;
-    position: absolute;
-    right: 80px;
-    top: 15px;
+    width: 8rem;
+    margin-top: 0.5rem;
     display: none;
 }
 
@@ -102,8 +101,6 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    position: relative;
-    /* display: none; */
 }
 
 .qr-img {
